[gd_scene load_steps=6 format=2]

[ext_resource path="res://change_screen/change_screen.gd" type="Script" id=1]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://change_screen/meh.ogg" type="AudioStream" id=3]
[ext_resource path="res://change_screen/grunt.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="change_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.03388e-05
margin_right = -6.10352e-05
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 211.0
margin_top = 100.0
margin_right = 811.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 400 )

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/CenterContainer"]
margin_left = 50.0
margin_top = 57.0
margin_right = 550.0
margin_bottom = 343.0
rect_min_size = Vector2( 500, 0 )
custom_constants/separation = 20

[node name="label" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 14.0

[node name="return_label" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 500.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "How much will you return?"

[node name="HSlider" type="HSlider" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 500.0
margin_bottom = 89.0
rect_min_size = Vector2( 300, 0 )
value = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 500.0
margin_bottom = 128.0

[node name="min_money" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 164.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="input_money" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 168.0
margin_right = 332.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
align = 1

[node name="max_money" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 336.0
margin_right = 500.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
align = 2

[node name="result_label" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 500.0
margin_bottom = 162.0

[node name="change_button" type="Button" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 500.0
margin_bottom = 207.0
custom_fonts/font = SubResource( 1 )
text = "Confirm"

[node name="reaction_label" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 227.0
margin_right = 500.0
margin_bottom = 241.0

[node name="continue_button" type="Button" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
margin_top = 261.0
margin_right = 500.0
margin_bottom = 286.0
custom_fonts/font = SubResource( 1 )
text = "Continue"

[node name="reaction_timer" type="Timer" parent="."]
one_shot = true

[node name="meh_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[node name="grunt_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 1.0

[connection signal="value_changed" from="CenterContainer/Panel/CenterContainer/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/Panel/CenterContainer/VBoxContainer/change_button" to="." method="_on_change_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/CenterContainer/VBoxContainer/continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="timeout" from="reaction_timer" to="." method="_on_reaction_timer_timeout"]
